--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
 // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "io.coil-kt:coil:1.1.1"
+
 }
