--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.android.marsphotos"
+        applicationId "com.example.android.countries"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -54,5 +54,6 @@ dependencies {
 // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation "io.coil-kt:coil:1.1.1"
+    implementation "io.coil-kt:coil-svg:0.12.0"
 
 }
